--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,16 @@
 </head>
 <body>
 
+<% if user_signed_in? %>
+<li><%= link_to 'Edit profile', edit_user_registration_path %></li> 
+<li><%= link_to "Logout (#{current_user.email})", destroy_user_session_path, method: :delete %></li>
+<% else %>
+<li><%= link_to "Sign up", new_user_registration_path %></li>
+<li><%= link_to "Login", new_user_session_path %></li>
+<% end %>
+
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <%= yield %>
 
 </body>
