succesfully created user and company but didn't link them yet

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,6 +18,10 @@
   		<%= w.label :name %>
   		<%= w.text_field :name %>
   	</div>
+  	<div>
+  		<%= w.label :subdomain %>
+  		<%= w.text_field :subdomain %>
+  	</div>
   <% end %>
   </div>
 
