--- a/app/views/devices/show.html.haml
+++ b/app/views/devices/show.html.haml
@@ -1,5 +1,25 @@
 %p#notice= notice
 
+%div{ :style => "width: 800px;" }
+  %div#map{ :style => "width: 800px; height: 400px;"}
+
+= @position.inspect
+
+- if !@position.empty? 
+  %script{:type=>"text/javascript"}
+    handler = Gmaps.build('Google');
+    handler.buildMap({ provider: { zoom: 10 }, internal: {id: 'map'}}, function(){
+    markers = handler.addMarkers(
+    = raw @hash.to_json
+    );
+    / handler.map.centerOn(
+    / = raw @hash.first.to_json
+    / );
+    handler.bounds.extendWith(markers);
+    handler.fitMapToBounds();
+    });
+
+
 %p
   %b Name:
   = @device.name
