--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,60 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Trackman</a>
+    </div>
 
-<% if user_signed_in? %>
-<li><%= link_to 'Edit profile', edit_user_registration_path %></li> 
-<li><%= link_to "Logout (#{current_user.email})", destroy_user_session_path, method: :delete %></li>
-<% else %>
-<li><%= link_to "Sign up", new_user_registration_path %></li>
-<li><%= link_to "Login", new_user_session_path %></li>
-<% end %>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><%= link_to "Home", root_path %></li> 
+        <% if current_user %>  
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage <b class="caret"></b></a>
+<!--             <ul class="dropdown-menu">
+                <li><%= link_to "Cars", cars_path %></li>
+                <li><%= link_to "Devices", devices_path %></li>
+                <li><%= link_to "Simcards", simcards_path %></li>
+                <li><%= link_to "Members", members_path %></li> 
+                <li><%= link_to "Groups", groups_path %></li>        
+              <% if current_user && current_user.has_role?(:admin) %>
+                <li class="divider"></li>
+                <li><%= link_to "Car Manufacturers", car_manufacturers_path %></li>
+                <li><%= link_to "Car Models", car_models_path %></li>
+                <li><%= link_to "Car Types", car_types_path %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Device Models", device_models_path %></li>
+                <li><%= link_to "Device Types", device_types_path %></li>
+                <li><%= link_to "Device Manufacturers", device_manufacturers_path %></li>
+                <li><%= link_to "Teleproviders", teleproviders_path %></li>
+              <% end %>
+            </ul> -->
+          </li> 
+        <% end %>    
+      </ul>
+      
+      <ul class="nav navbar-nav navbar-right">
+        <% if user_signed_in? %>
+        <li><%= link_to 'Settings', edit_user_registration_path %></li> 
+        <li><%= link_to "Logout (#{current_user.email})", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+        <li><%= link_to "Sign up", new_user_registration_path %></li>
+        <li><%= link_to "Login", new_user_session_path %></li>
+        <% end %>  
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
