--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Acts</title>
+  <title>Trackman</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
   <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script> 
@@ -35,6 +35,8 @@
                 <li><%= link_to "Simcards", simcards_path %></li>
                 <li><%= link_to "Groups", groups_path %></li>        
               <% if current_user && current_user.has_role?(:admin) %>
+                <li class="divider"></li>
+                <li><%= link_to "Companies", companies_path %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Car Manufacturers", car_manufacturers_path %></li>
                 <li><%= link_to "Car Models", car_models_path %></li>
