--- a/app/views/invitations/new.html.erb
+++ b/app/views/invitations/new.html.erb
@@ -9,10 +9,13 @@
   	<%= f.text_field field %>
   </p>
 <% end -%>
-
+	
+	<div>
 	<%= radio_button_tag 'default_role', 'Driver', true %> Driver
 	<%= radio_button_tag 'default_role', 'Employee' %> Employee
+	</div>
 
+	</br>
 
-  <p><%= f.submit t("devise.invitations.new.submit_button") %></p>
+  <p><%= f.submit t("devise.invitations.new.submit_button"), class: "btn btn-primary" %></p>
 <% end %>
