--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,8 @@
                 <li><%= link_to "Cars", cars_path %></li>
                 <li><%= link_to "Devices", devices_path %></li>
                 <li><%= link_to "Simcards", simcards_path %></li>
-                <li><%= link_to "Groups", groups_path %></li>        
+                <li><%= link_to "Car Groups", groups_path %></li>
+                <li><%= link_to "Users", users_path %></li>        
               <% if current_user && current_user.has_role?(:admin) %>
                 <li class="divider"></li>
                 <li><%= link_to "Companies", companies_path %></li>
