--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,9 @@
 <h1>Listing users</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Email</th>
-      <th>Password</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,7 +12,6 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.email %></td>
-        <td><%= user.password %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -24,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'Invite User', new_user_invitation_path %>
