--- a/app/views/simcards/show.html.haml
+++ b/app/views/simcards/show.html.haml
@@ -2,7 +2,7 @@
 
 %p
   %b Telephone no:
-  = @simcard.telephone_no
+  = @simcard.telephone_number
 %p
   %b Teleprovider:
   = link_to @simcard.teleprovider.name, @simcard.teleprovider
