--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -10,11 +10,11 @@
     markers = handler.addMarkers(
     = raw @hash.to_json
     );
-    handler.map.centerOn(
-    = raw @hash.first.to_json
-    );
+    / handler.map.centerOn(
+    / = raw @hash.first.to_json
+    / );
     handler.bounds.extendWith(markers);
-    //handler.fitMapToBounds();
+    handler.fitMapToBounds();
     });
 
 
