added routes and controllers for the API

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,3 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<h1>Welcome to Trackman</h1>
+<p>Managing your fleet never been easier.</p>
 
-<%= current_tenant.name if current_tenant %>
