--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,30 +2,33 @@
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
+  <div class="form-group">
+    <%= f.label :email %><br />
+    <%= f.email_field :email, autofocus: true %>
+  </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <div><%= f.label :password %><br />
+  <div class="form-group"><%= f.label :password %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.label :password_confirmation %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  </div>
 
-  <div>
+  <h3>Company infos</h3>
+
   <%= fields_for(:company) do |w| %>
-  	<div>
-  		<%= w.label :name %>
+  	<div class="form-group">
+  		<%= w.label :name, "Company name" %><br/>
   		<%= w.text_field :name %>
   	</div>
-  	<div>
-  		<%= w.label :subdomain %>
+  	<div class="form-group">
+  		<%= w.label :subdomain %></br>
   		<%= w.text_field :subdomain %>
   	</div>
   <% end %>
-  </div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= f.submit "Sign up", class: "btn btn-success" %></div>
 <% end %>
-
+<br/>
 <%= render "devise/shared/links" %>
