--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
       
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-        <li><%= link_to 'Settings', edit_user_registration_path %></li> 
+        <li><%= link_to 'Account', edit_user_registration_path %></li> 
         <li><%= link_to "Logout (#{current_user.email})", destroy_user_session_path, method: :delete %></li>
         <% else %>
         <li><%= link_to "Sign up", new_user_registration_path %></li>
@@ -67,8 +67,12 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="container">
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<% if notice && !notice.empty? %> 
+  <p class="alert alert-success"><%= notice %></p>
+<% end %>
+<% if alert && !alert.empty? %> 
+  <p class="alert alert-warning"><%= alert %></p>
+<% end %>
 <%= yield %>
 </div>
 </body>
