--- a/app/views/car_models/index.html.haml
+++ b/app/views/car_models/index.html.haml
@@ -1,10 +1,16 @@
-%h1 Listing car_models
+%h1 Listing Car Models
+
+= search_form_for @q, :class => "form-inline" do |f| 
+  = f.search_field :name_cont, :placeholder => "search with name" 
+  = f.submit "Search" ,:class => "btn btn-default"
+
 
 = form_tag '', :method => :get do
   = "Car Model"
-  = select_tag('by_car_manufacturer', options_from_collection_for_select(CarManufacturer.all, 'id', 'name'), :include_blank => true)
-
+  = select_tag( :by_car_manufacturer, options_for_select(all_car_manufacturers, params[:by_car_manufacturer]), :include_blank => true)
   = submit_tag 'Filter', :class => "btn btn-primary"
+
+%br
 
 %table.table
   %tr
