--- a/app/views/car_types/index.html.haml
+++ b/app/views/car_types/index.html.haml
@@ -1,8 +1,14 @@
 %h1 Listing car_types
 
+= search_form_for @q, :class => "form-inline" do |f| 
+  = f.search_field :name_cont, :placeholder => "search with name" 
+  = f.submit "Search" ,:class => "btn btn-default"
+
+%br
+
 %table.table
   %tr
-    %th Type
+    = content_tag :th, sort_link(@q, :name)
     %th
     %th
     %th
