--- a/app/views/car_types/index.html.haml
+++ b/app/views/car_types/index.html.haml
@@ -1,4 +1,4 @@
-%h1 Listing car_types
+%h1 Listing Car Types
 
 = search_form_for @q, :class => "form-inline" do |f| 
   = f.search_field :name_cont, :placeholder => "search with name" 
