--- a/app/views/simcards/index.html.haml
+++ b/app/views/simcards/index.html.haml
@@ -9,7 +9,7 @@
 = form_tag '', :method => :get, :class => "form-inline" do
   .form-group
     %b= "Teleprovider :"
-    = select_tag( :by_teleprovider, options_for_select(teleproviders, params[:by_teleprovider]), :include_blank => true)
+    = select_tag( :by_teleprovider, options_for_select(all_teleproviders, params[:by_teleprovider]), :include_blank => true)
   .form-group
     = radio_button_tag 'available', 'true' , true
     = "Available" 
