--- a/app/views/device_types/index.html.haml
+++ b/app/views/device_types/index.html.haml
@@ -1,7 +1,7 @@
-%h1 Listing device_types
+%h1 Listing Device Types
 
 = search_form_for @q, :class => "form-inline" do |f| 
-  = f.search_field :name_cont, :placeholder => "search with name" 
+  = f.search_field :name_cont, :placeholder => "Search with name" 
   = f.submit "Search" ,:class => "btn btn-default"
 
 %br
