--- a/app/views/devices/index.html.haml
+++ b/app/views/devices/index.html.haml
@@ -1,10 +1,10 @@
 %h1 Listing devices
 
 = search_form_for @q do |f| 
-  = f.label :name_cont 
-  = f.search_field :name_cont 
-  = f.submit
+  = f.search_field :name_cont, :placeholder => "Search with name"
+  = f.submit "Search", :class => "btn btn-default"
 
+%br
 
 %table.table
   %tr
