--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,8 +1,14 @@
 %h1 Listing groups
 
+= search_form_for @q, :class => "form-inline" do |f| 
+  = f.search_field :name_cont, :placeholder => "Search with name" 
+  = f.submit "Search" ,:class => "btn btn-default"
+
+%br
+
 %table.table
   %tr
-    %th Name
+    = content_tag :th, sort_link(@q, :name)
     %th
     %th
     %th
