added searching and column sorting to teleproviders

--- a/app/views/simcards/index.html.haml
+++ b/app/views/simcards/index.html.haml
@@ -1,7 +1,7 @@
 %h1 Listing simcards
 
 = search_form_for @q, :class => "form-inline" do |f| 
-  = f.search_field :telephone_number_cont, :placeholder => "search with telephone number" 
+  = f.search_field :telephone_number_cont, :placeholder => "Search with telephone number" 
   = f.submit "Search" ,:class => "btn btn-default"
 
 %br
