--- a/app/views/teleproviders/index.html.haml
+++ b/app/views/teleproviders/index.html.haml
@@ -1,9 +1,15 @@
 %h1 Listing teleproviders
 
+= search_form_for @q, :class => "form-inline" do |f| 
+  = f.search_field :name_cont, :placeholder => "Search with name" 
+  = f.submit "Search" ,:class => "btn btn-default"
+
+%br
+
 %table.table
   %tr
-    %th Name
-    %th Apn
+    = content_tag :th, sort_link(@q, :name)
+    = content_tag :th, sort_link(@q, :apn)
     %th
     %th
     %th
