--- a/app/views/devices/index.html.haml
+++ b/app/views/devices/index.html.haml
@@ -6,6 +6,39 @@
 
 %br
 
+= form_tag '', :method => :get, :class => "form-inline" do
+  .form-group
+    = "Device model"
+    = select_tag( :by_device_mode, options_for_select(all_device_models, params[:by_device_mode]), :include_blank => true)
+  %br 
+  .form-group
+    = "Device type"
+    = select_tag( :by_device_type, options_for_select(all_device_types, params[:by_device_type]), :include_blank => true)
+  %br 
+  .form-group
+    = radio_button_tag 'has_simcard', 'all' , true
+    = "All"
+    = radio_button_tag 'has_simcard', 'true' , params["has_simcard"] == 'true' ? true : false
+    = "With Simcard" 
+    = radio_button_tag 'has_simcard', 'false' , params["has_simcard"] == 'false' ? true : false
+    = "Without Simcard"
+    
+  %br
+  .form-group
+    = radio_button_tag 'available', 'all' , true
+    = "All"
+    = radio_button_tag 'available', 'true' , params["available"] == 'true' ? true : false
+    = "Available" 
+  .form-group
+    = radio_button_tag 'available', 'false' , params["available"] == 'false' ? true : false
+    = "Used"
+  .form-group
+    
+  %br
+  = submit_tag 'Filter', :class => "btn btn-primary"
+
+%br
+
 %table.table
   %tr
     = content_tag :th, sort_link(@q, :name)
