removed the turbolinks gem and updated the map in the devices#show view

--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -15,7 +15,7 @@
 %p
   %b Device:
   - if @car.device
-    = @car.device.name
+    = link_to @car.device.name, @car.device
   - else
     = "This car doesn't have a device yet"
 %p
