--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -11,12 +11,10 @@
     = content_tag :th, sort_link(@q, :name)
     %th
     %th
-    %th
 
   - @groups.each do |group|
     %tr
-      %td= group.name
-      %td= link_to 'Show', group
+      %td= link_to group.name, group
       %td= link_to 'Edit', edit_group_path(group)
       %td= link_to 'Destroy', group, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
