--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,12 +30,14 @@
         <% if current_user %>  
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage <b class="caret"></b></a>
-          <ul class="dropdown-menu">
+            <ul class="dropdown-menu">
+              <% if current_user && current_user.has_role?(:manager) %>
                 <li><%= link_to "Cars", cars_path %></li>
                 <li><%= link_to "Devices", devices_path %></li>
                 <li><%= link_to "Simcards", simcards_path %></li>
                 <li><%= link_to "Car Groups", groups_path %></li>
-                <li><%= link_to "Users", users_path %></li>        
+                <li><%= link_to "Users", users_path %></li> 
+              <% end %>        
               <% if current_user && current_user.has_role?(:admin) %>
                 <li class="divider"></li>
                 <li><%= link_to "Companies", companies_path %></li>
@@ -51,6 +53,9 @@
               <% end %>
             </ul>
           </li> 
+          <% if current_user && current_user.has_role?(:manager) %>
+            <li><%= link_to 'Live Map', live_map_cars_path %></li> 
+          <% end %>
         <% end %>    
       </ul>
       
