1. added ability to update first_name and last_name from users#edit. 2. fixed a small issue with displaying live map for 1 car

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,16 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Firstname:</strong>
+  <%= @user.first_name %>
+</p>
+
+<p>
+  <strong>Lastname:</strong>
+  <%= @user.last_name %>
+</p>
+
+<p>
   <strong>Email:</strong>
   <%= @user.email %>
 </p>
