--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,14 +12,20 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :first_name %><br>
+    <%= f.text_field :first_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :last_name %><br>
+    <%= f.text_field :last_name %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
-  <div class="field">
-    <%= f.label :password %><br>
-    <%= f.text_field :password %>
-  </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Update User", class: "btn btn-success" %>
   </div>
 <% end %>
