successfully simulated moving cars and generated alarms sent via emails when those cars moved but everything is handled through rake tasks for now, but the methods and the logic is there

--- a/app/views/rules/index.html.haml
+++ b/app/views/rules/index.html.haml
@@ -1,16 +1,18 @@
 %h1 Listing rules
 
-%table
-  %tr
-    %th
-    %th
-    %th
+%table.table
+	%tr
+		%th "Name"
+		%th
+		%th
+		%th
 
-  - @rules.each do |rule|
-    %tr
-      %td= link_to 'Show', rule
-      %td= link_to 'Edit', edit_rule_path(rule)
-      %td= link_to 'Destroy', rule, :method => :delete, :data => { :confirm => 'Are you sure?' }
+	- @rules.each do |rule|
+		%tr
+			%td= rule.name
+			%td= link_to 'Show', rule
+			%td= link_to 'Edit', edit_rule_path(rule)
+			%td= link_to 'Destroy', rule, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
 
