admin can now list rules, show rules and their parameters but also can add new rules and specify the params associated with them and the type of each param

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,8 @@
                 <li><%= link_to "Device Models", device_models_path %></li>
                 <li><%= link_to "Device Types", device_types_path %></li>
                 <li><%= link_to "Teleproviders", teleproviders_path %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Rules", rules_path %></li>
               <% end %>
             </ul>
           </li> 
