--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
                 <li><%= link_to "Teleproviders", teleproviders_path %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Rules", rules_path %></li>
+                <li><%= link_to "Alarms", alarms_path %></li>
               <% end %>
             </ul>
           </li> 
