--- a/app/views/rules/index.html.haml
+++ b/app/views/rules/index.html.haml
@@ -2,8 +2,9 @@
 
 %table.table
 	%tr
-		%th "Name"
-		%th "Method name"
+		%th Name
+		%th Method name
+		%th Number of params
 		%th
 		%th
 		%th
@@ -12,6 +13,7 @@
 		%tr
 			%td= rule.name
 			%td= rule.method_name
+			%td= rule.params.count
 			%td= link_to 'Show', rule
 			%td= link_to 'Edit', edit_rule_path(rule)
 			%td= link_to 'Destroy', rule, :method => :delete, :data => { :confirm => 'Are you sure?' }
