--- a/app/views/rules/show.html.haml
+++ b/app/views/rules/show.html.haml
@@ -1,6 +1,7 @@
 %p#notice= notice
 
 
+
 %p
     %b Name:
     = @rule.name
@@ -8,6 +9,7 @@
     %b Method name:
     = @rule.method_name
 
+%b Parmeters :
 %p
     %ul
         - @rule.parameters.each do |param|
