added the ability to speciy conjunction when adding mutiple rules/triggers to an alarm, also fixed bugs

--- a/app/views/alarms/_form.html.haml
+++ b/app/views/alarms/_form.html.haml
@@ -14,9 +14,12 @@
 	#rules
 		= f.fields_for :rules do |rule|
 			= render 'rule_fields', :f => rule
-		.links
-			= link_to_add_association 'add rule', f, :rules
+		%p 
+			.links
+				= link_to_add_association 'add rule', f, :rules, :class => "btn btn-primary"
 
-
+	%br
+	%br
+	%br
 	.actions
 		= f.submit 'Save'
