--- a/app/views/cars/_form.html.haml
+++ b/app/views/cars/_form.html.haml
@@ -55,6 +55,10 @@
     = f.label :group
     = f.collection_select(:group_id, Group.all, :id, :name)
 
+  %h3 Alarms
+  = f.select :alarm_ids, Alarm.all.collect {|x| [x.name, x.id]}, {}, :multiple => true
+
+  %br
 
   .actions
     = f.submit 'Save'
