--- a/app/views/alarms/edit.html.haml
+++ b/app/views/alarms/edit.html.haml
@@ -1,6 +1,23 @@
 %h1 Editing alarm (Not supported yet)
 
-= render 'form'
+= form_for @alarm do |f|
+	- if @alarm.errors.any?
+		#error_explanation
+			%h2= "#{pluralize(@alarm.errors.count, "error")} prohibited this alarm from being saved:"
+			%ul
+				- @alarm.errors.full_messages.each do |msg|
+					%li= msg
+
+	.field
+		= f.label :name
+		= f.text_field :name
+
+	%br
+	%br
+	%br
+	.actions
+		= f.submit 'Save'
+
 
 = link_to 'Show', @alarm
 \|
