added and applied the annotate gem

--- a/app/views/alarms/edit.html.haml
+++ b/app/views/alarms/edit.html.haml
@@ -12,9 +12,13 @@
 		= f.label :name
 		= f.text_field :name
 
-	%br
-	%br
-	%br
+	%b Rules :
+	%p
+		%ul
+			- @alarm.rules.each do |rule|
+				%li= rule_with_params(rule,@alarm)
+
+		
 	.actions
 		= f.submit 'Save'
 
