added jquery plugin to define schedule in a interactive manner

--- a/app/views/regions/_form.html.haml
+++ b/app/views/regions/_form.html.haml
@@ -6,4 +6,4 @@
 #map_canvas
 
 .actions
-	%input{ :type=>"button", :id => "submit_polygon" , :required => true}
+	%input{ :type=>"button", :value => "Submit", :id => "submit_polygon" , :required => true}
