--- a/app/views/work_schedules/new.html.erb
+++ b/app/views/work_schedules/new.html.erb
@@ -16,7 +16,8 @@
 
 
 <div id='calendar'></div>
-<input type="button" id="shows_it_to_me" value="show it to me" />
+<br/>
+<input type="button" id="submit_calendar" value="Submit" />
 
 
 <script type='text/javascript'>
@@ -33,8 +34,8 @@
 			},
 			editable: true,
 			selectable: true,
-			minTime: 6,
-			maxTime:23,
+			minTime: 8,
+			maxTime:20,
 			slotMinutes: 30,
 			selectHelper: true,
 			events: [
@@ -110,7 +111,7 @@
 			$('#calendar').timetable('option', 'height', calcCalendarHeight());
 		});
 
-		$("#shows_it_to_me").click(function(ev){
+		$("#submit_calendar").click(function(ev){
 			console.log(calendar.timetable('clientEvents'))
 		});
 
