removed titles from events

--- a/app/views/work_schedules/new.html.erb
+++ b/app/views/work_schedules/new.html.erb
@@ -40,14 +40,14 @@
 			selectHelper: true,
 			events: [
 				{
-					title: 'Lunch',
+					title: '',
 					start: 600,
 					end: 720,
 					allDay: false,
 					resource: '2'
 				},
 				{
-					title: 'Meeting',
+					title: '',
 					start: 830,
 					end: 1000,
 					allDay: false,
@@ -68,7 +68,7 @@
 
 				calendar.timetable('renderEvent',
 				{
-					title: "title",
+					title: "",
 					start: start_time,
 					end: end_time,
 					allDay: false,
