--- a/app/views/cars/_form.html.haml
+++ b/app/views/cars/_form.html.haml
@@ -55,9 +55,15 @@
     = f.label :group
     = f.collection_select(:group_id, Group.all, :id, :name)
 
-  %h3 Alarms
+  %h2 Alarms
   = f.select :alarm_ids, Alarm.all.collect {|x| [x.name, x.id]}, {}, :multiple => true
 
+  %h2 Alarms
+  = f.select :work_schedule_id, WorkSchedule.all.collect {|x| [x.name, x.id]}, {}
+
+
+  %br
+  %br
   %br
 
   .actions
