--- a/app/views/cars/_form.html.haml
+++ b/app/views/cars/_form.html.haml
@@ -59,7 +59,8 @@
   = f.select :alarm_ids, Alarm.all.collect {|x| [x.name, x.id]}, {}, :multiple => true
 
   %h2 Alarms
-  = f.select :work_schedule_id, WorkSchedule.all.collect {|x| [x.name, x.id]}, {}
+  = f.label :work_schedule_id, "Work Schedule"
+  = f.collection_select(:work_schedule_id, WorkSchedule.all, :id, :name)
 
 
   %br
