--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -10,8 +10,12 @@
     = f.label :name
     = f.text_field :name
 
-  %h3 Alarms
+  %h2 Alarms
   = f.select :alarm_ids, Alarm.all.collect {|x| [x.name, x.id]}, {}, :multiple => true
+
+  %h2 Work Schedule
+  = f.label :work_schedule_id, "Work Schedule"
+  = f.collection_select(:work_schedule_id, WorkSchedule.all, :id, :name)
 
   %br
 
